--- a/index_new.html
+++ b/index_new.html
@@ -50,7 +50,6 @@
                             <span class="author-block">
                                 <a href="#">Filippos Kokkinos</a><sup>2</sup>,
                             </span>
-                            <br>
                             <span class="author-block">
                                 <a href="#">Hadar Averbuch-Elor</a><sup>3</sup>,
                             </span>
@@ -71,7 +70,6 @@
 
                         <div class="column has-text-centered">
                             <div class="publication-links">
-                                <!-- Paper Link -->
                                 <span class="link-block">
                                     <a href="#" class="external-link button is-normal is-rounded is-primary">
                                         <span class="icon">
@@ -81,13 +79,12 @@
                                     </a>
                                 </span>
 
-                                <!-- Interactive Results Link -->
                                 <span class="link-block">
-                                    <a href="#" class="external-link button is-normal is-rounded interactive-button">
+                                    <a href="./videos/video_results_viewer.html" class="external-link button is-normal is-rounded interactive-button">
                                         <span class="icon">
                                             <i class="fas fa-play"></i>
                                         </span>
-                                        <span>Interactive Results</span>
+                                        <span>Video Results</span>
                                     </a>
                                 </span>
                             </div>
@@ -126,16 +123,12 @@
                             variation, or licensing issues. On the other hand, an abundance of diverse and
                             permissively-licensed data exists in the wild, consisting of scenes with varying appearances
                             (illuminations, transient occlusions, etc.) from sources such as tourist photos.
-                        </p>
-                        <p>
                             To this end, we present <strong>WildCAT3D</strong>, a framework for generating novel views
                             of scenes learned from diverse 2D scene image data captured in the wild. We unlock training
                             on these data sources by explicitly modeling global appearance conditions in images,
                             extending the state-of-the-art multi-view diffusion paradigm to learn from scene views of
                             varying appearances. Our trained model generalizes to new scenes at inference time, enabling
                             the generation of multiple consistent novel views.
-                        </p>
-                        <p>
                             WildCAT3D provides state-of-the-art results on single-view NVS in object- and scene-level
                             settings, while training on strictly less data sources than prior methods. Additionally, it
                             enables novel applications by providing global appearance control during generation.
