--- a/videos/video_results_viewer.html
+++ b/videos/video_results_viewer.html
@@ -13,29 +13,29 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Google Sans', sans-serif;
             line-height: 1.6;
-            color: #333;
-            background: #f8f9fa;
+            color: black;
+            background: white;
         }
 
         .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            background: white;
+            color: black;
             padding: 2rem 0;
             text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
         }
 
         .header h1 {
             font-size: 2.5rem;
             margin-bottom: 0.5rem;
-            font-weight: 300;
+            font-weight: 400;
         }
 
         .header p {
             font-size: 1.1rem;
-            opacity: 0.9;
+            opacity: 0.8;
             max-width: 800px;
             margin: 0 auto;
             padding: 0 1rem;
@@ -51,7 +51,7 @@
             display: flex;
             background: white;
             border-radius: 10px;
-            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
             margin-bottom: 2rem;
             overflow: hidden;
         }
@@ -66,14 +66,15 @@
             font-weight: 500;
             transition: all 0.3s ease;
             position: relative;
+            color: black;
         }
 
         .nav-tab:hover {
-            background: #f8f9fa;
+            background: #f2f2f2;
         }
 
         .nav-tab.active {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #363636;
             color: white;
         }
 
@@ -97,19 +98,19 @@
 
         .section-title {
             font-size: 2rem;
-            color: #2c3e50;
+            color: black;
             margin-bottom: 1.5rem;
             text-align: center;
-            font-weight: 300;
+            font-weight: 400;
         }
 
         .section-description {
-            background: white;
+            background: #f9f9f9;
             padding: 1.5rem;
             border-radius: 10px;
             margin-bottom: 2rem;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #ccc;
         }
 
         .results-grid {
@@ -119,7 +120,7 @@
 
         .result-item {
             background: white;
-            border-radius: 15px;
+            border-radius: 12px;
             padding: 1.5rem;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -133,7 +134,7 @@
         .result-title {
             font-size: 1.2rem;
             font-weight: 600;
-            color: #2c3e50;
+            color: black;
             margin-bottom: 1rem;
             padding-bottom: 0.5rem;
             border-bottom: 2px solid #eee;
@@ -154,9 +155,9 @@
 
         .media-label {
             font-weight: 500;
-            color: #666;
+            color: #444;
             margin-bottom: 0.5rem;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             text-transform: uppercase;
             letter-spacing: 0.5px;
         }
@@ -266,7 +267,7 @@
         .stat-number {
             font-size: 2rem;
             font-weight: bold;
-            color: #667eea;
+            color: black;
         }
 
         .stat-label {
@@ -349,7 +350,8 @@
         <div id="interpolation" class="tab-content">
             <h2 class="section-title">In-the-Wild Interpolation</h2>
             <div class="section-description">
-                <p>Results showing interpolation between views of scenes with differing appearances. WildCAT3D fine-tuned
+                <p>Results showing interpolation between views of scenes with differing appearances. WildCAT3D
+                    fine-tuned
                     with two observed input views can interpolate between them to produce static videos with consistent
                     appearance. Two interpolations are provided for each scene: one using the start view's appearance
                     and another using the end view's appearance throughout the trajectory.</p>
