--- a/videos/video_results_viewer.html
+++ b/videos/video_results_viewer.html
@@ -111,6 +111,37 @@
             margin-bottom: 2rem;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
             border-left: 4px solid #ccc;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 2rem;
+        }
+
+        .section-description p {
+            flex: 1;
+            margin: 0;
+        }
+
+        .inline-stat {
+            background: white;
+            padding: 1rem 1.5rem;
+            border-radius: 8px;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            min-width: 150px;
+            flex-shrink: 0;
+        }
+
+        .stat-number {
+            font-size: 2rem;
+            font-weight: bold;
+            color: black;
+        }
+
+        .stat-label {
+            color: #666;
+            margin-top: 0.5rem;
+            font-size: 0.9rem;
         }
 
         .results-grid {
@@ -249,30 +280,17 @@
             padding: 0.5rem;
         }
 
-        .stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .stat-card {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .stat-number {
-            font-size: 2rem;
-            font-weight: bold;
-            color: black;
-        }
-
-        .stat-label {
-            color: #666;
-            margin-top: 0.5rem;
+        /* Responsive design for mobile */
+        @media (max-width: 768px) {
+            .section-description {
+                flex-direction: column;
+                align-items: stretch;
+                text-align: center;
+            }
+            
+            .inline-stat {
+                min-width: auto;
+            }
         }
     </style>
 </head>
@@ -310,10 +328,7 @@
                 <p>Results showing vanilla WildCAT3D inference for novel view synthesis with various hard-coded
                     trajectories including lateral turns, zoom-outs, and NeRF-like circular paths. Each result shows the
                     input view and video showing generated novel views.</p>
-            </div>
-
-            <div class="stats" id="inference-stats">
-                <div class="stat-card">
+                <div class="inline-stat">
                     <div class="stat-number" id="inference-count">0</div>
                     <div class="stat-label">Scene Results</div>
                 </div>
@@ -332,10 +347,7 @@
                     external images, WildCAT3D can generate novel views while editing scene appearance (e.g., generating
                     nighttime scenes from daytime photos). Each result shows the appearance conditioning image,
                     generated view, and input view for comparison.</p>
-            </div>
-
-            <div class="stats" id="appearance-stats">
-                <div class="stat-card">
+                <div class="inline-stat">
                     <div class="stat-number" id="appearance-count">0</div>
                     <div class="stat-label">Generation Results</div>
                 </div>
@@ -355,10 +367,7 @@
                     with two observed input views can interpolate between them to produce static videos with consistent
                     appearance. Two interpolations are provided for each scene: one using the start view's appearance
                     and another using the end view's appearance throughout the trajectory.</p>
-            </div>
-
-            <div class="stats" id="interpolation-stats">
-                <div class="stat-card">
+                <div class="inline-stat">
                     <div class="stat-number" id="interpolation-count">0</div>
                     <div class="stat-label">Interpolation Sequences</div>
                 </div>
