move more styles to css

--- a/videos/video_results_viewer.html
+++ b/videos/video_results_viewer.html
@@ -9,16 +9,14 @@
 </head>
 
 <body>
-    <div class="header"
-        style="display: flex; align-items: center; justify-content: center; position: relative; padding: 1.5rem 2rem;">
+    <div class="header">
         <!-- Back button aligned left -->
-        <a href="../index_new.html" style="position: absolute; left: 2rem; padding: 0.4rem 1rem; background: white; color: #667eea; border-radius: 5px;
-              text-decoration: none; font-weight: 500; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+        <a href="../index_new.html" class="back-button">
             ← Back
         </a>
 
         <!-- Title centered -->
-        <h1 style="font-size: 2rem; font-weight: 300; margin: 0;">WildCAT3D Video Results</h1>
+        <h1>WildCAT3D Video Results</h1>
     </div>
 
     <div class="container">
