--- a/index_new.html
+++ b/index_new.html
@@ -22,8 +22,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"
         async></script>
 
-
-
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -58,13 +56,13 @@
                             </span>
                         </div>
 
-                        <div class="is-size-5 publication-authors" style="margin-bottom: 10px;">
+                        <div class="is-size-5 publication-authors publication-authors-affiliation">
                             <span class="author-block"><sup>1</sup>Tel Aviv University</span> &nbsp;&nbsp;
                             <span class="author-block"><sup>2</sup>Meta AI</span> &nbsp;&nbsp;
                             <span class="author-block"><sup>3</sup>Cornell University</span>
                         </div>
 
-                        <div class="is-size-6" style="margin-bottom: 20px;">
+                        <div class="is-size-6 publication-authors-note">
                             <span>*Work done while interning at Meta AI</span>
                         </div>
 
@@ -80,7 +78,8 @@
                                 </span>
 
                                 <span class="link-block">
-                                    <a href="./videos/video_results_viewer.html" class="external-link button is-normal is-rounded interactive-button">
+                                    <a href="./videos/video_results_viewer.html"
+                                        class="external-link button is-normal is-rounded interactive-button">
                                         <span class="icon">
                                             <i class="fas fa-play"></i>
                                         </span>
@@ -96,13 +95,13 @@
     </section>
 
     <!-- Teaser Video Section -->
-    <section class="hero teaser" style="background: white; color: black;">
+    <section class="hero teaser">
         <div class="container is-max-desktop">
             <div class="hero-body">
                 <video class="teaser-video" autoplay muted loop playsinline>
                     <source src="./resources/teaser_video.mp4" type="video/mp4">
                 </video>
-                <h2 class="subtitle has-text-centered" style="margin-top: 1rem; color: #666;">
+                <h2 class="subtitle has-text-centered teaser-subtitle">
                     WildCAT3D generates consistent novel views from single images while enabling appearance control
                 </h2>
             </div>
@@ -140,7 +139,7 @@
     </section>
 
     <!-- Method Section -->
-    <section class="section" style="background: #f8f9fa;">
+    <section class="section section-alt-bg">
         <div class="container is-max-desktop">
             <div class="columns is-centered">
                 <div class="column is-full-width has-text-centered">
@@ -175,7 +174,7 @@
             <div class="appearance-control">
                 <h2 class="title is-3 has-text-centered">Novel Appearance Control</h2>
                 <div class="content has-text-centered">
-                    <p style="font-size: 1.2rem; margin-bottom: 2rem;">
+                    <p class="appearance-control-text">
                         Our explicit modeling of appearance enables novel applications such as text-controlled
                         appearance generation and interpolation between different appearance conditions.
                     </p>
@@ -277,8 +276,7 @@
                     </p>
                 </div>
                 <div class="content has-text-centered">
-                    <img src="./resources/comparison_table.png" alt="Quantitative Comparison"
-                        style="max-width: 80%; border-radius: 8px;">
+                    <img src="./resources/comparison_table.png" alt="Quantitative Comparison" class="comparison-image">
                 </div>
             </div>
         </div>
@@ -288,7 +286,7 @@
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title is-3">BibTeX</h2>
-            <pre style="background: #f5f5f5; padding: 1rem; border-radius: 8px;"><code>@article{alper2025wildcat3d,
+            <pre class="bibtex-code"><code>@article{alper2025wildcat3d,
   title={WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild},
   author={Alper, Morris and Novotny, David and Kokkinos, Filippos and Averbuch-Elor, Hadar and Monnier, Tom},
   journal={arXiv preprint},
@@ -298,7 +296,7 @@
     </section>
 
     <!-- Acknowledgements Section -->
-    <section class="section" style="background: #f8f9fa;">
+    <section class="section section-alt-bg">
         <div class="container is-max-desktop content">
             <h2 class="title is-3">Acknowledgments</h2>
             <p>
