--- a/index_new.html
+++ b/index_new.html
@@ -40,19 +40,19 @@
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                <a href="#">Morris Alper</a><sup>1*</sup>,
+                                <a href="http://morrisalp.github.io">Morris Alper</a><sup>1*</sup>,
                             </span>
                             <span class="author-block">
                                 <a href="https://d-novotny.github.io/">David Novotny</a><sup>2</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="#">Filippos Kokkinos</a><sup>2</sup>,
+                                <a href="https://www.fkokkinos.com">Filippos Kokkinos</a><sup>2</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="#">Hadar Averbuch-Elor</a><sup>3</sup>,
+                                <a href="https://www.hadarelor.com">Hadar Averbuch-Elor</a><sup>3</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="#">Tom Monnier</a><sup>2</sup>
+                                <a href="https://tmonnier.com">Tom Monnier</a><sup>2</sup>
                             </span>
                         </div>
 
