--- a/index_new.html
+++ b/index_new.html
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                     <div class="content has-text-centered">
-                        <img class="method-diagram" src="./resources/method_diagram.png"
+                        <img class="method-diagram" src="./images/system.jpg"
                             alt="WildCAT3D Method Overview">
                     </div>
                 </div>
