--- a/index_new.html
+++ b/index_new.html
@@ -227,7 +227,8 @@
                 <h2 class="title is-3 has-text-centered">Applications</h2>
                 <div class="content has-text-centered">
                     <p class="appearance-control-text">
-                        Our explicit modeling of appearance enables novel applications such as appearance-controlled generation
+                        Our explicit modeling of appearance enables novel applications such as appearance-controlled
+                        generation
                         using external conditioning images and interpolation between views of differing appearances.
                     </p>
 
@@ -245,7 +246,8 @@
                                 <p>Appearance Condition</p>
                             </div>
                             <div class="demo-item">
-                                <img src="./videos/applications/appearance_conditioned_gen/5_gen.gif" alt="Generated result">
+                                <img src="./videos/applications/appearance_conditioned_gen/5_gen.gif"
+                                    alt="Generated result">
                                 <p>Generated Novel Views</p>
                             </div>
                         </div>
@@ -260,7 +262,8 @@
                                 <p>Start View</p>
                             </div>
                             <div class="demo-item">
-                                <img src="./videos/applications/interpolation/5_interp.gif" alt="Generated interpolation sequence">
+                                <img src="./videos/applications/interpolation/5_interp.gif"
+                                    alt="Generated interpolation sequence">
                                 <p>Generated Interpolation Sequence</p>
                             </div>
                             <div class="demo-item">
@@ -281,13 +284,25 @@
                 <h2 class="title is-3 has-text-centered">Comparison with Prior Work</h2>
                 <div class="content has-text-justified">
                     <p>
-                        WildCAT3D outperforms existing methods on single-view novel view synthesis benchmarks, achieving
-                        superior quality while training on more diverse but less curated data sources. Our approach
-                        demonstrates particular strength in handling real-world scenes with varying appearances.
+                        WildCAT3D significantly outperforms the previous SOTA MegaScenes NVS model (MS NVS) at
+                        generating consistent and high-quality novel view sequences from single images. Our method
+                        achieves superior performance while training on unfiltered data in-the-wild, unlike the aggressive filtering
+                        used by prior methods.
                     </p>
                 </div>
-                <div class="content has-text-centered">
-                    <img src="./resources/comparison_table.png" alt="Quantitative Comparison" class="comparison-image">
+                <div class="comparison-videos">
+                    <div class="comparison-item">
+                        <h4 class="title is-5">MS NVS (Previous SOTA)</h4>
+                        <video autoplay muted loop playsinline>
+                            <source src="./resources/ms_nvs_comparison.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="comparison-item">
+                        <h4 class="title is-5">WildCAT3D (Ours)</h4>
+                        <video autoplay muted loop playsinline>
+                            <source src="./resources/wildcat3d_comparison.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
