--- a/index_new.html
+++ b/index_new.html
@@ -286,7 +286,8 @@
                     <p>
                         WildCAT3D significantly outperforms the previous SOTA MegaScenes NVS model (MS NVS) at
                         generating consistent and high-quality novel view sequences from single images. Our method
-                        achieves superior performance while training on unfiltered data in-the-wild, unlike the aggressive filtering
+                        achieves superior performance while training on unfiltered data in-the-wild, unlike the
+                        aggressive filtering
                         used by prior methods.
                     </p>
                 </div>
@@ -338,7 +339,6 @@
                     <div class="content">
                         <p>
                             This webpage template is adapted from <a
-                                href="https://github.com/facebookresearch/vggt">VGGT</a> and <a
                                 href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>,
                             under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0
                                 License</a>.
