--- a/index_new.html
+++ b/index_new.html
@@ -167,64 +167,11 @@
         </div>
     </section>
 
-    <!-- Results Section -->
-    <section class="section">
-        <div class="container is-max-desktop">
-            <div class="columns is-centered">
-                <div class="column is-full-width has-text-centered">
-                    <h2 class="title is-3">Results</h2>
-                    <div class="content has-text-justified">
-                        <p>
-                            WildCAT3D demonstrates superior performance on standard novel view synthesis benchmarks
-                            while
-                            training on diverse in-the-wild data. Our method excels at generating consistent novel views
-                            from single input images using various camera trajectories including lateral turns,
-                            zoom-outs,
-                            and NeRF-like circular paths. We achieve state-of-the-art results on both object-centric and
-                            scene-level novel view synthesis tasks.
-                        </p>
-                    </div>
-
-                    <div class="results-grid">
-                        <div class="result-item">
-                            <video autoplay muted loop playsinline>
-                                <source src="./resources/result_1.mp4" type="video/mp4">
-                            </video>
-                            <div class="content">
-                                <h4>Circular Camera Trajectories</h4>
-                                <p>Novel views generated with NeRF-like circular camera paths from single input images
-                                </p>
-                            </div>
-                        </div>
-                        <div class="result-item">
-                            <video autoplay muted loop playsinline>
-                                <source src="./resources/result_2.mp4" type="video/mp4">
-                            </video>
-                            <div class="content">
-                                <h4>Lateral Camera Movements</h4>
-                                <p>Consistent view synthesis with lateral turn trajectories</p>
-                            </div>
-                        </div>
-                        <div class="result-item">
-                            <video autoplay muted loop playsinline>
-                                <source src="./resources/result_3.mp4" type="video/mp4">
-                            </video>
-                            <div class="content">
-                                <h4>Zoom-Out Trajectories</h4>
-                                <p>High-quality novel views with zoom-out camera motions</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Comparison Section -->
     <section class="section">
         <div class="container is-max-desktop">
             <div class="comparison-section">
-                <h2 class="title is-3 has-text-centered">Comparison with Prior Work</h2>
+                <h2 class="title is-3 has-text-centered">Results and Comparison</h2>
                 <div class="content has-text-justified">
                     <p>
                         WildCAT3D significantly outperforms the previous SOTA MegaScenes NVS model (MS NVS) at
