--- a/index_new.html
+++ b/index_new.html
@@ -102,7 +102,8 @@
                     <source src="./resources/teaser_video.mp4" type="video/mp4">
                 </video>
                 <h2 class="subtitle has-text-centered teaser-subtitle">
-                    WildCAT3D generates consistent novel views from single images while enabling appearance control
+                    WildCAT3D learns from in-the-wild image collections with diverse appearances,
+                    enabling consistent novel view synthesis from a single image with controllable appearance.
                 </h2>
             </div>
         </div>
