--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                <a href="http://morrisalp.github.io">Morris Alper</a><sup>1*</sup>,
+                                <a href="http://morrisalp.github.io">Morris Alper</a><sup>1,2</sup>
                             </span>
                             <span class="author-block">
-                                <a href="https://d-novotny.github.io/">David Novotny</a><sup>2</sup>,
+                                <a href="https://d-novotny.github.io/">David Novotny</a><sup>2</sup>
                             </span>
                             <span class="author-block">
-                                <a href="https://www.fkokkinos.com">Filippos Kokkinos</a><sup>2</sup>,
+                                <a href="https://www.fkokkinos.com">Filippos Kokkinos</a><sup>2</sup>
                             </span>
                             <span class="author-block">
-                                <a href="https://www.hadarelor.com">Hadar Averbuch-Elor</a><sup>3</sup>,
+                                <a href="https://www.hadarelor.com">Hadar Averbuch-Elor</a><sup>3</sup>
                             </span>
                             <span class="author-block">
                                 <a href="https://tmonnier.com">Tom Monnier</a><sup>2</sup>
@@ -60,10 +60,6 @@
                             <span class="author-block"><sup>1</sup>Tel Aviv University</span> &nbsp;&nbsp;
                             <span class="author-block"><sup>2</sup>Meta AI</span> &nbsp;&nbsp;
                             <span class="author-block"><sup>3</sup>Cornell University</span>
-                        </div>
-
-                        <div class="is-size-6 publication-authors-note">
-                            <span>*Work done while interning at Meta AI</span>
                         </div>
 
                         <div class="column has-text-centered">
