--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild</title>
 
+    <!-- Open Graph -->
+    <meta property="og:url" content="https://wildcat3d.github.io/" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild" />
     <meta property="og:description"
         content="We present a framework for generating novel views of scenes learned from diverse 2D scene image data captured in the wild." />
+    <meta property="og:image" content="https://wildcat3d.github.io/images/icon.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="284" />
+    <meta property="og:site_name" content="WildCAT3D" />
 
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:title" content="WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild" />
-    <meta property="twitter:description"
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:domain" content="wildcat3d.github.io" />
+    <meta name="twitter:url" content="https://wildcat3d.github.io/" />
+    <meta name="twitter:title" content="WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild" />
+    <meta name="twitter:description"
         content="We present a framework for generating novel views of scenes learned from diverse 2D scene image data captured in the wild." />
+    <meta name="twitter:image" content="https://wildcat3d.github.io/images/icon.png" />
 
-    <!-- MathJax library -->
+    <!-- MathJax library
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"
-        async></script>
+        async></script> -->
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
@@ -109,14 +121,12 @@
                     <div class="columns is-centered is-variable is-6">
                         <div class="column is-4 has-text-centered">
                             <img src="./videos/inference/images-014-126-commons-Pont_de_la_Caille-0-pictures/gt0.png"
-                                alt="Input view (single image)"
-                                class="io-img">
+                                alt="Input view (single image)" class="io-img">
                             <p><strong>Input (Single View)</strong></p>
                         </div>
                         <div class="column is-4 has-text-centered">
                             <img src="./videos/inference/images-014-126-commons-Pont_de_la_Caille-0-pictures/gen0.gif"
-                                alt="Generated novel views from WildCAT3D"
-                                class="io-img">
+                                alt="Generated novel views from WildCAT3D" class="io-img">
                             <p><strong>Output (Novel Consistent Views)</strong></p>
                         </div>
                     </div>
