--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <!-- Subtitle -->
                 <h2 class="subtitle has-text-centered teaser-subtitle mt-4">
                     WildCAT3D learns from in-the-wild image collections with diverse appearances, enabling consistent
-                    novel view synthesis from a single image.
+                    novel view synthesis from a single image capturing a never-before-seen scene.
                 </h2>
             </div>
         </div>
@@ -287,6 +287,10 @@
                             </div>
                         </div>
                     </div>
+
+                    <p class="additional-results-text">
+                        <a href="videos/video_results_viewer.html">Click here</a> for additional results.
+                    </p>
                 </div>
             </div>
         </div>
