--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <span class="link-block">
-                                    <a href="#" class="external-link button is-normal is-rounded is-primary">
+                                    <a href="https://arxiv.org/abs/2506.13030" class="external-link button is-normal is-rounded is-primary">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
@@ -300,11 +300,14 @@
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title is-3">BibTeX</h2>
-            <pre class="bibtex-code"><code>@article{alper2025wildcat3d,
+            <pre class="bibtex-code"><code>@misc{alper2025wildcat3d,
   title={WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild},
   author={Alper, Morris and Novotny, David and Kokkinos, Filippos and Averbuch-Elor, Hadar and Monnier, Tom},
-  journal={arXiv preprint},
-  year={2025}
+  year={2025},
+  eprint={2506.13030},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  url={https://arxiv.org/abs/2506.13030},
 }</code></pre>
         </div>
     </section>
